# Function-Dispatch

./: CMakeLists.txt  CaptureFunction.h  Function.cpp  Function.h  FunctionHandle.cpp  FunctionHandle.h  Function_Tuple.h  IVirtualFunctional.h  MainTest.cpp  ToString.h  TransformArgument.h  TupleString.h  VirtualFunctionUtility.cpp  VirtualFunctionUtility.h  VirtualVariable.h
